# rstar-python

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  test_and_deploy.yml
python/: __init__.py
python/rstar_python/: __init__.py  rstar_python.pyi
python/tests/: test_rtree.py
src/: lib.rs
