[package]
name = "rstar-python"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Python bindings for the rstar R*-tree spatial index"
repository = "https://github.com/kephale/rstar-python"
homepage = "https://github.com/kephale/rstar-python"

[lib]
name = "rstar_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py310"] }
numpy = "0.28"
rstar = { version = "0.13", features = ["serde"] }