[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rstar-python"
version = "0.1.0"
description = "Python bindings for the rstar R*-tree spatial index"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Rust",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "rstar_python.rstar_python"
