[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rstar-python"
version = "0.1.0"
description = "Python bindings for the rstar R*-tree spatial index"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "Kyle Harrington", email = "kyle@kyleharrington.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "numpy>=1.21.6",
]

[project.urls]
Homepage = "https://github.com/kephale/rstar-python"
Repository = "https://github.com/kephale/rstar-python"
Issues = "https://github.com/kephale/rstar-python/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "rstar_python.rstar_python"